tests/fixtures/invalid/float_in_str.py
# Cannot use 'in' with Float and Str
x: bool = 1.0 in "hello"
